A change in the file content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>HELLO COURSERA</title>
 </head>
 <body>
-	<h1>Hello Coursera</h1>
+	<h1>Hello Coursera!Good to see you</h1>
 </body>
 </html>
